# research-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: semantic_scholar.py
classes/document_summarizer/: document_summarizer.py  multimodal_document_summarizer.py
classes/model_adapter/: claude_model_adapter.py  model_adapter.py  model_adapter_factory.py  openai_model_adapter.py
classes/vector_db/: chroma_vector_db.py  vector_database.py
config/: app_config.py
models/: query_keywords.py
services/: langchain.py  paper_retriever.py  vector_db.py
tests/: test_chroma_vector_db.py  test_error_handler.py  test_model_adapter.py  test_multimodal_document_summarizer.py  test_research_agent.py
utils/: document_processor.py  error_handler.py  logger.py  logging_config.py  paper_downloader.py  pdf_processor.py
