[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.21",
    "langchain[anthropic]>=0.3.23",
    "langgraph>=0.3.29",
    "openapi-generator-cli>=7.12.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]
