[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[hf-xet]>=0.30.2",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "langgraph>=0.3.29",
    "openapi-generator-cli>=7.12.0",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
    "sympy>=1.13.1",
]
